--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ body {
   margin-inline: auto;
 }
 
+.tabs-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
 .footer-logo {
   @apply w-[20px] relative
 }
